# Proy1BD

./: .coverage  .coveragerc  Auth.py  Dockerfile  FakeData.py  README.md  app.py  docker-compose.yml  entrypoint.sh  pyproject.toml  realm-export.json  requirements.txt
.github/workflows/: python-app.yml
Auth/: Keycloak.py
CRUD/: Lugar.py  Publicacion.py  Usuario.py  Viaje.py  ViajeLugar.py
DB/: __init__.py  init.sql  mongo.py  postgres.py  redis.py
DB/postgres/: init.sql
models/: Lugar.py  Publicacion.py  Usuario.py  Viaje.py  ViajeLugar.py  adminToken.py  createUser.py  lugar_schema.py  newUser.py  publicacion_schema.py  user.py  usuario_schema.py  viaje_lugar_schema.py  viaje_schema.py
tests/: test_sample.py
